package io.github.lzdev42.catalyticui.integration

import com.catalytic.grpc.*
import io.github.lzdev42.catalyticui.data.grpc.GrpcClientManager
import kotlinx.coroutines.*
import kotlinx.coroutines.channels.ReceiveChannel
import kotlin.test.Test
import kotlin.test.assertTrue
import kotlin.test.assertNotNull

/**
 * äº‹ä»¶è®¢é˜…é›†æˆæµ‹è¯•
 * éªŒè¯ Subscribe æµèƒ½æ­£ç¡®æ¥æ”¶çŠ¶æ€å˜æ›´äº‹ä»¶
 */
class EventSubscriptionTest {
    
    private val testHost = "127.0.0.1"
    private val testPort = 5000
    private val testScope = CoroutineScope(SupervisorJob() + Dispatchers.IO)
    
    /**
     * æµ‹è¯•è®¢é˜…åèƒ½æ”¶åˆ°åˆå§‹çŠ¶æ€äº‹ä»¶
     * Subscribe ä¼šåœ¨é¦–æ¬¡è½®è¯¢æ—¶æ¨é€å½“å‰çŠ¶æ€
     */
    @Test
    fun testSubscribeReceivesInitialStatus() {
        runBlocking {
            println("ğŸ“¡ Testing Subscribe receives initial status...")
            val clientManager = GrpcClientManager(testScope)
            
            try {
                withTimeout(15000) {
                    val result = clientManager.connect(testHost, testPort)
                    assertTrue(result.isSuccess, "Connection should succeed")
                    val client = result.getOrThrow()
                    
                    // è®¢é˜…äº‹ä»¶ - Wire ä½¿ç”¨ GrpcStreamingCall
                    val streamingCall = client.Subscribe()
                    val (sendChannel, receiveChannel) = streamingCall.executeIn(testScope)
                    
                    // å‘é€è®¢é˜…è¯·æ±‚
                    val request = SubscribeRequest(topics = listOf("slot_update"))
                    sendChannel.send(request)
                    sendChannel.close()  // å¿…é¡»å…³é—­ä»¥é€šçŸ¥æœåŠ¡å™¨è¯·æ±‚å®Œæˆ
                    
                    println("   Subscribed, waiting for first event...")
                    
                    // ç­‰å¾…ç¬¬ä¸€ä¸ªäº‹ä»¶ (æœ€å¤š5ç§’)
                    val firstEvent = withTimeout(5000) {
                        receiveChannel.receive()
                    }
                    
                    println("   Received event: type=${firstEvent.type}")
                    assertNotNull(firstEvent, "Should receive at least one event")
                    assertTrue(firstEvent.type == "slot_update", "Event type should be slot_update")
                    
                    val slotUpdate = firstEvent.slot_update
                    assertNotNull(slotUpdate, "SlotUpdate payload should exist")
                    println("   slot_id: ${slotUpdate.slot_id}")
                    println("   status: ${slotUpdate.status?.status}")
                    println("   total_steps: ${slotUpdate.status?.total_steps}")
                    
                    // å…³é—­è®¢é˜…
                    sendChannel.close()
                    
                    println("âœ… Subscribe receives initial status - PASSED")
                }
            } catch (e: Exception) {
                println("âŒ Test failed: ${e.message}")
                throw e
            } finally {
                clientManager.disconnect()
            }
        }
    }
    
    /**
     * æµ‹è¯•çŠ¶æ€å˜æ›´æ—¶æ”¶åˆ°äº‹ä»¶
     */
    @Test
    fun testSubscribeReceivesStatusChange() {
        runBlocking {
            println("ğŸ“¡ Testing Subscribe receives status change...")
            val clientManager = GrpcClientManager(testScope)
            
            try {
                withTimeout(15000) {
                    val result = clientManager.connect(testHost, testPort)
                    val client = result.getOrThrow()
                    
                    // å…ˆåœæ­¢æµ‹è¯•ç¡®ä¿å¹²å‡€çŠ¶æ€
                    client.StopTest().execute(SlotId(id = 0))
                    delay(500)
                    
                    // æ·»åŠ ä¸€ä¸ªæµ‹è¯•æ­¥éª¤
                    val stepId = (System.currentTimeMillis() % 100000).toInt()
                    val stepJson = """{"step_id":$stepId,"step_name":"Test Step","execution_mode":"engine_controlled","skip":false,"engine_task":{"target_device":"dmm","action_type":"query","payload":"*IDN?","timeout_ms":5000},"check_type":"none"}"""
                    client.AddTestStep().execute(TestStepPayload(json_content = stepJson))
                    println("   Added test step: $stepId")
                    
                    // è®¢é˜…äº‹ä»¶
                    val streamingCall = client.Subscribe()
                    val (sendChannel, receiveChannel) = streamingCall.executeIn(testScope)
                    sendChannel.send(SubscribeRequest(topics = listOf("slot_update")))
                    sendChannel.close()  // å¿…é¡»å…³é—­ä»¥é€šçŸ¥æœåŠ¡å™¨è¯·æ±‚å®Œæˆ
                    
                    // æ”¶é›†äº‹ä»¶
                    val events = mutableListOf<Event>()
                    val collectJob = launch {
                        repeat(5) {
                            try {
                                val event = withTimeout(2000) { receiveChannel.receive() }
                                events.add(event)
                            } catch (e: Exception) {
                                // è¶…æ—¶æˆ–å–æ¶ˆ
                            }
                        }
                    }
                    
                    // ç­‰å¾…åˆå§‹äº‹ä»¶
                    delay(1000)
                    
                    // è§¦å‘çŠ¶æ€å˜æ›´
                    println("   Starting test...")
                    client.StartTest().execute(StartTestRequest(slot_id = 0, loop = false))
                    
                    // ç­‰å¾…äº‹ä»¶æ”¶é›†
                    delay(2000)
                    collectJob.cancel()
                    sendChannel.close()
                    
                    println("   Collected ${events.size} events")
                    events.forEachIndexed { idx, e ->
                        println("   Event[$idx]: type=${e.type}, status=${e.slot_update?.status?.status}")
                    }
                    
                    assertTrue(events.isNotEmpty(), "Should receive events")
                    
                    // æ¸…ç†
                    client.StopTest().execute(SlotId(id = 0))
                    
                    println("âœ… Subscribe receives status change - PASSED")
                }
            } catch (e: Exception) {
                println("âŒ Test failed: ${e.message}")
                throw e
            } finally {
                clientManager.disconnect()
            }
        }
    }
}
