package io.github.lzdev42.catalyticui.integration

import com.catalytic.grpc.Empty
import io.github.lzdev42.catalyticui.data.grpc.GrpcClientManager
import io.github.lzdev42.catalyticui.data.grpc.GrpcRepository
import kotlinx.coroutines.CoroutineScope
import kotlinx.coroutines.Dispatchers
import kotlinx.coroutines.runBlocking
import org.junit.Test
import kotlin.test.assertNotNull
import kotlin.test.assertTrue

/**
 * Layer 1: gRPC ËøûÊé•ÊµãËØï
 * 
 * ÂâçÁΩÆÊù°‰ª∂ÔºöHost Â∫îÁî®ÈúÄËøêË°åÂú® localhost:50051
 * 
 * ËøêË°åÂëΩ‰ª§Ôºö./gradlew jvmTest
 */
class GrpcConnectionTest {
    
    private val testHost = "127.0.0.1"
    private val testPort = 5001  // Matches running Host port (5000 occupied by ControlCenter)
    private val testScope = CoroutineScope(Dispatchers.IO)
    

    /**
     * ÊµãËØïËÉΩÂê¶ËøûÊé•Âà∞ Host gRPC ÊúçÂä°
     */
    @Test
    fun testHostConnection() {
        runBlocking {
            println("üîó Testing gRPC connection to $testHost:$testPort...")
            
            val clientManager = GrpcClientManager(testScope)
            
            try {
                val result = clientManager.connect(testHost, testPort)
                
                if (result.isFailure) {
                    println("‚ùå Connect returned failure: ${result.exceptionOrNull()}")
                    result.exceptionOrNull()?.printStackTrace()
                }
                
                assertTrue(result.isSuccess, "Connection should succeed: ${result.exceptionOrNull()?.message}")
                println("‚úÖ Connected successfully!")
                
                val client = result.getOrNull()
                assertNotNull(client, "Client should not be null")
                
            } catch (e: Exception) {
                println("‚ùå Connection failed: ${e.message}")
                println("‚ö†Ô∏è  Make sure Host is running on $testHost:$testPort")
                throw e
            } finally {
                clientManager.disconnect()
            }
        }
    }
    
    /**
     * ÊµãËØïËé∑ÂèñÁ≥ªÁªü‰ø°ÊÅØ
     */
    @Test
    fun testGetSystemInfo() {
        runBlocking {
            println("üìã Testing GetSystemInfo RPC...")
            
            val clientManager = GrpcClientManager(testScope)
            
            try {
                val result = clientManager.connect(testHost, testPort)
                assertTrue(result.isSuccess, "Connection should succeed")
                
                val client = result.getOrThrow()
                val systemInfo = client.GetSystemInfo().execute(Empty())
                
                assertNotNull(systemInfo, "System info should not be null")
                assertNotNull(systemInfo.version, "Version should not be null")
                
                println("‚úÖ GetSystemInfo successful")
                println("   Version: ${systemInfo.version}")
                println("   Slot Count: ${systemInfo.slot_count}")
                println("   Engine Loaded: ${systemInfo.engine_loaded}")
                println("   Registered Protocols: ${systemInfo.registered_protocols.joinToString(", ")}")
                
            } catch (e: Exception) {
                println("‚ùå GetSystemInfo failed: ${e.message}")
                throw e
            } finally {
                clientManager.disconnect()
            }
        }
    }
    
    /**
     * ÊµãËØïÂàóÂá∫ÊßΩ‰Ωç
     */
    @Test
    fun testListSlots() {
        runBlocking {
            println("üé∞ Testing ListSlots RPC...")
            
            val clientManager = GrpcClientManager(testScope)
            
            try {
                val result = clientManager.connect(testHost, testPort)
                assertTrue(result.isSuccess, "Connection should succeed")
                
                val client = result.getOrThrow()
                val slotsResponse = client.ListSlots().execute(Empty())
                
                assertNotNull(slotsResponse, "Slots response should not be null")
                println("‚úÖ ListSlots successful")
                println("   Found ${slotsResponse.items.size} slots")
            
                slotsResponse.items.forEach { slot ->
                    println("   - Slot ${slot.slot_id}: bound")
                }
                
            } catch (e: Exception) {
                println("‚ùå ListSlots failed: ${e.message}")
                throw e
            } finally {
                clientManager.disconnect()
            }
        }
    }
    
    /**
     * ÊµãËØïËé∑ÂèñËÆæÂ§áÁ±ªÂûã
     */
    @Test
    fun testGetDeviceTypes() {
        runBlocking {
            println("üì± Testing ListDeviceTypes RPC...")
            
            val clientManager = GrpcClientManager(testScope)
            
            try {
                val result = clientManager.connect(testHost, testPort)
                assertTrue(result.isSuccess, "Connection should succeed")
                
                val client = result.getOrThrow()
                val typesResponse = client.ListDeviceTypes().execute(Empty())
                
                assertNotNull(typesResponse, "Device types response should not be null")
                println("‚úÖ ListDeviceTypes successful")
                println("   Found ${typesResponse.items.size} device types")
                
                typesResponse.items.forEach { type ->
                    println("   - ${type.name} (ID: ${type.id}, Transport: ${type.transport})")
                }
                
            } catch (e: Exception) {
                println("‚ùå ListDeviceTypes failed: ${e.message}")
                throw e
            } finally {
                clientManager.disconnect()
            }
        }
    }
    
    /**
     * ÊµãËØïÈÄöËøá GrpcRepository Ëé∑ÂèñËÆæÂ§áÁ±ªÂûãÔºàÈõÜÊàêÊµãËØïÔºâ
     */
    @Test
    fun testRepositoryGetDeviceTypes() {
        runBlocking {
            println("üèóÔ∏è  Testing GrpcRepository.getDeviceTypes()...")
            
            val clientManager = GrpcClientManager(testScope)
            val repository = GrpcRepository(clientManager, testScope)
            
            try {
                val result = clientManager.connect(testHost, testPort)
                assertTrue(result.isSuccess, "Connection should succeed")
                
                val deviceTypes = repository.getDeviceTypes()
                
                assertNotNull(deviceTypes, "Device types should not be null")
                println("‚úÖ Repository.getDeviceTypes successful")
                println("   Found ${deviceTypes.size} device types")
                
                deviceTypes.forEach { type ->
                    println("   - ${type.name} (${type.devices.size} devices)")
                    type.devices.forEach { device ->
                        println("       ‚îî‚îÄ ${device.name} @ ${device.address}")
                    }
                }
                
            } catch (e: Exception) {
                println("‚ùå Repository.getDeviceTypes failed: ${e.message}")
                throw e
            } finally {
                clientManager.disconnect()
            }
        }
    }
}
