package io.github.lzdev42.catalyticui.integration

import com.catalytic.grpc.*
import io.github.lzdev42.catalyticui.data.grpc.GrpcClientManager
import kotlinx.coroutines.runBlocking
import kotlin.test.Test
import kotlin.test.assertTrue
import kotlin.test.assertEquals
import kotlinx.coroutines.CoroutineScope
import kotlinx.coroutines.Dispatchers
import kotlinx.coroutines.SupervisorJob
import kotlinx.coroutines.delay
import kotlinx.coroutines.withTimeout

/**
 * Layer 3: æµ‹è¯•æ‰§è¡Œæ§åˆ¶é›†æˆæµ‹è¯•
 * éªŒè¯ Start/Stop/Pause/Resume å’Œ GetSlotStatus API
 */
class TestExecutionTest {
    
    private val testHost = "127.0.0.1"
    private val testPort = 5000
    private val testScope = CoroutineScope(SupervisorJob() + Dispatchers.IO)
    
    /**
     * æµ‹è¯•è·å–æ§½ä½çŠ¶æ€ (ç©ºé—²çŠ¶æ€)
     */
    @Test
    fun testGetSlotStatusIdle() {
        runBlocking {
            println("ğŸ“Š Testing GetSlotStatus (Idle)...")
            val clientManager = GrpcClientManager(testScope)
            
            try {
                val result = clientManager.connect(testHost, testPort)
                assertTrue(result.isSuccess, "Connection should succeed")
                val client = result.getOrThrow()
                
                val slotId = SlotId(id = 0)
                
                // é‡ç½®æ§½ä½çŠ¶æ€ (å¯èƒ½æœ‰ä¹‹å‰æµ‹è¯•ç•™ä¸‹çš„çŠ¶æ€)
                client.StopTest().execute(slotId)
                delay(500)
                
                val status = client.GetSlotStatus().execute(slotId)
                
                println("   slot_id: ${status.slot_id}")
                println("   status: ${status.status}")
                println("   current_step_index: ${status.current_step_index}")
                println("   elapsed_ms: ${status.elapsed_ms}")
                
                assertEquals(0, status.slot_id, "Slot ID should be 0")
                // æ¥å— idle æˆ– completed ä½œä¸ºæœ‰æ•ˆçš„éè¿è¡ŒçŠ¶æ€
                val validIdleStates = listOf("idle", "completed")
                assertTrue(status.status in validIdleStates, 
                    "Status should be idle or completed, got: ${status.status}")
                
                println("âœ… GetSlotStatus successful")
                
            } finally {
                clientManager.disconnect()
            }
        }
    }
    
    /**
     * æµ‹è¯•å¯åŠ¨å’Œåœæ­¢æµ‹è¯•
     * ä½¿ç”¨è¶…æ—¶ä¿æŠ¤é˜²æ­¢æµ‹è¯•å¡æ­»
     */
    @Test
    fun testStartAndStopTest() {
        runBlocking {
            println("â–¶ï¸  Testing Start/Stop Test...")
            val clientManager = GrpcClientManager(testScope)
            
            try {
                withTimeout(15000) { // 15ç§’è¶…æ—¶ä¿æŠ¤
                    val result = clientManager.connect(testHost, testPort)
                    assertTrue(result.isSuccess, "Connection should succeed")
                    val client = result.getOrThrow()
                    
                    val slotId = 0
                    
                    // å…ˆæ·»åŠ ä¸€ä¸ªæµ‹è¯•æ­¥éª¤ï¼Œå¦åˆ™ StartTest å¯èƒ½ç¬é—´å®Œæˆ
                    val stepId = (System.currentTimeMillis() % 100000).toInt()
                    val stepJson = """{"step_id":$stepId,"step_name":"Dummy Step","execution_mode":"engine_controlled","skip":false,"engine_task":{"target_device":"dmm","action_type":"wait","payload":"","timeout_ms":30000},"check_type":"none"}"""
                    client.AddTestStep().execute(TestStepPayload(json_content = stepJson))
                    println("   Added dummy wait step: $stepId")
                    
                    // å¯åŠ¨æµ‹è¯•
                    val startRequest = StartTestRequest(slot_id = slotId, loop = false)
                    val startResult = client.StartTest().execute(startRequest)
                    println("   StartTest: success=${startResult.success}, error=${startResult.error}")
                    
                    if (!startResult.success) {
                        println("   âš ï¸  StartTest failed (may be expected if no valid steps): ${startResult.error}")
                        // ä¸è¦æ–­è¨€å¤±è´¥ï¼Œå› ä¸ºå¯èƒ½ç¼ºå°‘å…¶ä»–é…ç½®
                    } else {
                        // çŸ­æš‚ç­‰å¾…è®©çŠ¶æ€å˜ä¸º Running
                        delay(500)
                        
                        // æ£€æŸ¥çŠ¶æ€
                        val statusAfterStart = client.GetSlotStatus().execute(SlotId(id = slotId))
                        println("   Status after start: ${statusAfterStart.status}")
                        // Note: çŠ¶æ€å¯èƒ½æ˜¯ running, paused, idle, completed, error
                        
                        // åœæ­¢æµ‹è¯•
                        val stopResult = client.StopTest().execute(SlotId(id = slotId))
                        println("   StopTest: success=${stopResult.success}")
                        
                        delay(500)
                        
                        // éªŒè¯çŠ¶æ€å˜ä¸º idle
                        val statusAfterStop = client.GetSlotStatus().execute(SlotId(id = slotId))
                        println("   Status after stop: ${statusAfterStop.status}")
                    }
                    
                    println("âœ… Start/Stop Test completed")
                }
            } catch (e: Exception) {
                println("âŒ Test failed: ${e.message}")
                throw e
            } finally {
                // ç¡®ä¿æ¸…ç†
                try {
                    val result = clientManager.connect(testHost, testPort)
                    if (result.isSuccess) {
                        result.getOrNull()?.StopTest()?.execute(SlotId(id = 0))
                    }
                } catch (_: Exception) {}
                clientManager.disconnect()
            }
        }
    }
    
    /**
     * æµ‹è¯•æš‚åœå’Œæ¢å¤
     */
    @Test
    fun testPauseAndResumeTest() {
        runBlocking {
            println("â¸ï¸  Testing Pause/Resume Test...")
            val clientManager = GrpcClientManager(testScope)
            
            try {
                withTimeout(15000) {
                    val result = clientManager.connect(testHost, testPort)
                    val client = result.getOrThrow()
                    
                    val slotId = SlotId(id = 0)
                    
                    // å…ˆå°è¯•æš‚åœ (å¯¹äºé running çŠ¶æ€åº”è¯¥è¿”å›é”™è¯¯)
                    val pauseResult = client.PauseTest().execute(slotId)
                    println("   PauseTest on idle slot: success=${pauseResult.success}, error=${pauseResult.error}")
                    
                    // éªŒè¯é”™è¯¯æ¶ˆæ¯åŒ…å«ä¸­æ–‡ç¿»è¯‘
                    if (!pauseResult.success) {
                        val hasChineseError = pauseResult.error.contains("çŠ¶æ€æ— æ•ˆ")
                        println("   Error message is Chinese: $hasChineseError")
                        assertTrue(hasChineseError, "Error should be translated to Chinese: ${pauseResult.error}")
                    }
                    
                    println("âœ… Pause/Resume Test completed (error handling verified)")
                }
            } finally {
                clientManager.disconnect()
            }
        }
    }
}
